# notion_session_database

./: .gitignore  LICENSE  README.md  pyproject.toml
notion_session_database/: database_update.py
